Publish jvm.options argfile and centralize --add-opens flags - CLM-39337 (#15541)